# system-modelling

./: .gitignore
cp 1/: КП1.ipynb
cp 1/reports/: КП1.docx
cp 2/: base_element.py  creator.py  dispose.py  process.py  simulation.py  simulation_model.py  utils.py
cp 2/reports/: ~$КП2.docx  ~WRL0951.tmp  КП2.docx
cp 3/: run_bank_simulation.py  run_hospital_simulation.py
cp 3/reports/: КП3.docx
cp 3/src/bank/: __init__.py  customer_flow.py  service_queue.py
cp 3/src/hospital/: __init__.py  patient_generator.py  patient_routing.py  patient_types.py  performance_metrics.py  utils.py
cp 4/: main.py  requirements.txt
cp 4/reports/: КП 4.docx
labwork 1/: КП1.docx
qnet/: pyproject.toml
qnet/qnet/: common.py  core_models.py  dist.py  factory.py  item_generator.py  logger.py  model.py  node.py  queueing.py  results_logger.py  routing_node.py  service_node.py  simulation_engine.py  simulation_node.py  transition.py
qnet/tests/: test_blocking_critical.py  test_blocking_logic.py  test_blocking_scenario.py  test_blocking_strategies.py  test_priority_transition.py  test_simulation_mechanics.py  visual_simulation.py
