[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qnet"
description = "Library for Queueing Network simulations"
version = "0.1.0"
requires-python = ">=3.9"
keywords = ["queueing-network", "discrete-event-simulation"]
license = { text = "MIT License" }
authors = [{ "name" = "Dmytro Pluhatyrov", "email" = "dmytro.pluhatyrov@gmail.com" }]
dependencies = ["prettytable >= 3.5.0", "dill >= 0.3.6"]
